# ZBar_android

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/qbar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenCV.cpp  color_util.c  color_util.h  log.h  native-lib.cpp  opencv_t.cpp  scan_image.c  test.cpp  test.h
app/src/main/cpp/zbar/: RCa33048
app/src/main/cpp/zbar/qrcode/: qrdectxt.c
app/src/main/java/com/example/qbar/: CameraPreview.java  CameraTestActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/qbar/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
